--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
         ["env", {
           "targets": { "node": 7 }
         }],
+        "es2015",
         "stage-0"
       ]
     },
@@ -14,6 +15,7 @@
         ["env", {
           "modules": false
         }],
+        "es2015",
         "stage-0"
       ]
     },
@@ -22,9 +24,14 @@
         ["env", {
           "modules": false
         }],
+        "es2015",
         "stage-0"
       ]
     }
   },
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    "transform-runtime",
+    "add-filehash",
+    "equire"
+  ]
 }
