--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firefly-desktop",
+  "name": "stellar-desktop-client",
   "version": "0.0.1",
   "author": "imloama@gmail.com",
   "description": "firefly desktop wallet",
