--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "author": "imloama@gmail.com",
   "description": "firefly desktop wallet",
-  "github":"https://github.com/imloama/stellar-desktop-client",
+  "github": "https://github.com/imloama/stellar-desktop-client",
   "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
@@ -16,7 +16,13 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": ""
+    "postinstall": "",
+    "pbuild": "node .electron-vue/pbuild.js",
+    "pbuild:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/pbuild.js",
+    "pbuild:linux": "cross-env BUILD_TARGET=linux node .electron-vue/pbuild.js",
+    "pbuild:mas": "cross-env BUILD_TARGET=mas node .electron-vue/pbuild.js",
+    "pbuild:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/pbuild.js"
+
   },
   "build": {
     "productName": "firefly-desktop",
@@ -53,8 +59,6 @@
     }
   },
   "dependencies": {
-    "vue": "^2.4.2",
-    "vuetify": "1.0.0",
     "animate.css": ">3.5.2",
     "awesome-qr": "1.0.9",
     "axios": ">0.17.1",
@@ -75,6 +79,7 @@
     "stellar-sdk": "^0.8.1",
     "swiper": ">=4.0.7",
     "uuid": ">=3.1.0",
+    "vue": "^2.4.2",
     "vue-awesome-swiper": ">=2.6.7",
     "vue-i18n": ">=7.2.0",
     "vue-methods-promise": ">=0.2.2",
@@ -83,28 +88,54 @@
     "vue-router": ">=2.7.0",
     "vue-toasted": ">=1.1.21",
     "vuedraggable": ">=2.16.0",
+    "vuetify": "1.0.0",
     "vuex": ">=2.4.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-add-filehash": "^6.9.4",
     "babel-plugin-equire": "^1.1.0",
     "babel-plugin-transform-imports": "^1.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "babili-webpack-plugin": "^0.1.2",
     "base64-font-loader": "^0.0.4",
+    "cfonts": "^1.1.3",
+    "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
+    "del": "^3.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^1.7.5",
+    "electron-builder": "^19.19.1",
+    "electron-debug": "^1.4.0",
+    "electron-devtools-installer": "^2.2.0",
+    "electron-packager": "^12.1.0",
+    "electron-rebuild": "^1.1.3",
     "es6-promise": "^4.1.1",
     "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": ">=1.1.3",
     "hammerjs": ">=2.0.8",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "js-base64": ">=2.3.2",
     "json-loader": ">=0.5.4",
+    "multispinner": "^0.2.1",
+    "node-loader": "^0.6.0",
     "npm": ">=5.5.1",
     "opn": ">=5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
@@ -114,29 +145,6 @@
     "semver": ">=5.3.0",
     "shelljs": ">=0.7.6",
     "sjcl": ">=1.0.7",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
-    "chalk": "^2.1.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
-    "del": "^3.0.0",
-    "devtron": "^1.4.0",
-    "electron": "^1.7.5",
-    "electron-debug": "^1.4.0",
-    "electron-devtools-installer": "^2.2.0",
-    "electron-builder": "^19.19.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "multispinner": "^0.2.1",
-    "node-loader": "^0.6.0",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
