--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "echarts": ">=4.0.1",
     "ed25519": ">=0.0.4",
     "js-nacl": "^1.2.2",
+    "localforage": "^1.7.2",
     "lodash": ">=4.17.4",
     "moment": ">=2.20.1",
     "nedb": "^1.8.0",
