--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     }
   },
   "dependencies": {
+    "@xkeshi/vue-qrcode": "^1.0.0",
     "animate.css": ">3.5.2",
-    "awesome-qr": "1.0.9",
+    "awesome-qr": "^1.2.0",
     "axios": ">0.17.1",
     "better-scroll": "^1.4.2",
     "bip39": "^2.4.0",
