--- a/package.json
+++ b/package.json
@@ -101,10 +101,12 @@
     "babel-plugin-add-filehash": "^6.9.4",
     "babel-plugin-equire": "^1.1.0",
     "babel-plugin-transform-imports": "^1.4.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.4.3",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.24.1",
