--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "postinstall": "",
     "pbuild": "node .electron-vue/pbuild.js",
-    "pbuild:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/pbuild.js",
-    "pbuild:linux": "cross-env BUILD_TARGET=linux node .electron-vue/pbuild.js",
+    "pbuild:darwin": "cross-env BUILD_TARGET=darwin BUILD_ARCH=x64 node .electron-vue/pbuild.js",
+    "pbuild:linux": "cross-env BUILD_TARGET=linux BUILD_ARCH=x64 node .electron-vue/pbuild.js",
+    "pbuild:linux32": "cross-env BUILD_TARGET=linux BUILD_ARCH=ia32 node .electron-vue/pbuild.js",
     "pbuild:mas": "cross-env BUILD_TARGET=mas node .electron-vue/pbuild.js",
-    "pbuild:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/pbuild.js"
+    "pbuild:win32": "cross-env BUILD_TARGET=win32 BUILD_ARCH=ia32  node .electron-vue/pbuild.js",
+    "pbuild:win64": "cross-env BUILD_TARGET=win32 BUILD_ARCH=x64 node .electron-vue/pbuild.js"
   },
   "build": {
     "productName": "polarstar",
@@ -66,6 +68,7 @@
     "decimal.js": ">=9.0.1",
     "echarts": ">=4.0.1",
     "ed25519": ">=0.0.4",
+    "electron-log": "^2.2.17",
     "js-nacl": "^1.2.2",
     "localforage": "^1.7.2",
     "lodash": ">=4.17.4",
@@ -78,6 +81,7 @@
     "stellar-hd-wallet": ">=0.0.4",
     "stellar-sdk": "^0.8.1",
     "swiper": ">=4.0.7",
+    "update-electron-app": "^1.3.0",
     "uuid": ">=3.1.0",
     "vue": "^2.4.2",
     "vue-awesome-swiper": ">=2.6.7",
